Fix contact form thank-you redirect

--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@
             </div>
 
             <!-- Netlify Form -->
-            <form name="contact" method="POST" data-netlify="true" class="form">
+            <form name="contact" method="POST" data-netlify="true" class="form" action="/thank-you.html">
               <input type="hidden" name="form-name" value="contact" />
               <div class="form-row">
                 <input class="input" type="text" name="name" placeholder="Your name" required />
