fixed x handle link

--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
               <a href="#contact">
                 <button class="btn-primary">Build Your Paper Trading Platform</button>
               </a>
-              <a href="https://x.com" target="_blank" rel="noopener noreferrer">
+              <a href="https://x.com/smartmnyquantai" target="_blank" rel="noopener noreferrer">
                 <button class="btn-ghost">
                   <span>Follow Research Updates on X</span>
                 </button>
